wip : fix layout z-index

--- a/src/OrchardCore.Themes/TheAdmin/Assets/scss/modules/_layout.scss
+++ b/src/OrchardCore.Themes/TheAdmin/Assets/scss/modules/_layout.scss
@@ -101,5 +101,5 @@ body {
 
 .action-bar {
     top: 3.3rem;
-    z-index: 1050;
+    z-index: $zindex-sticky;
 }
